Add monthly calendar todo view
